# OpenAI_Agents_Sdk

./: ML.md  README.md  Read.md
Lec_09 OpenRouter & Agent,  Global , Run Level/: .env  Agents.py
Lecture_No_2/: async_agent.py  async_concepts.py  pyproject.toml  simple_agent.py  streaming_agent.py
Lecture_No_2/project22/src/project22/: __init__.py  simple_agent.py
Lecture_No_3/: Agent.py  chatbot.py  grd.py  hello.py  pyproject.toml  strmlit.py
Lecture_No_3/.gradio/flagged/: dataset1.csv
Lecture_No_3/src/project23/: __init__.py
Lecture_No_5/: dataclass.py  oop.py
Lecture_No_6/: Types_of_Methods.py  dataclass.py
Lecture_No_7/: DC.py  hashing.py
Lecture_No_8/: callables.py  generic.py
lecture_NO_1/: pyproject.toml
lecture_NO_1/src/project05/: __init__.py  main.py
lecture_no_4/: Agent.py  chatbot.py  pyproject.toml
lecture_no_4/src/lecture_no_4/: __init__.py
