[project]
name = "project22"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Uzair", email = "uzairyasin83@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.4.400",
    "openai-agents>=0.0.7",
]

[project.scripts]
project22 = "project22:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
