[project]
name = "lecture-no-4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Uzair", email = "uzairyasin83@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.4.400",
    "openai-agents>=0.0.7",
]

[project.scripts]
lecture-no-4 = "lecture_no_4:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
